--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ html, body {
   margin-left: 10px;
   text-decoration: none;
   font-size: 2em;
+  color: #FFFFFF;
+  text-shadow: 0px 5px 9px rgba(0,0,0,0.50);
 }
 
 .menu-items li {
@@ -83,9 +85,62 @@ html, body {
 }
 
 .controles{
-	text-align: right;
+	text-align: left;
 }
 
-.gmnoprint .login{
-	display: none;
+.controles img{ 
+	margin-right: 3em;
+	margin-left: 0.5em;
 }
+
+.controles ul li ul{ 
+	
+	 background: #F4F4F4;
+	 border: 0px solid #000;
+	  -webkit-border-radius: 5px;
+	  -moz-border-radius: 5px;
+	 -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
+	 margin: 10px 0 0 -46px;
+	 padding: 0 10px 0;
+	 position: absolute;
+	 width: 126px;
+
+}
+.controles ul li ul li{ 
+	border-bottom: 1px solid #CCC;
+	 display: block;
+	 float: none;
+	 height: 14px;
+	 padding: 8px 0;
+	 text-align: center;
+	 width: 126px;
+	 margin: 0;
+
+	 
+}
+
+.controles ul li ul li a{
+	color: black;
+ 	text-shadow: none;
+
+}
+
+.controles ul li ul li:last-child:not(li.arrow){ 
+	border: 0;
+	 
+}
+
+/* Arrow */
+.arrow {
+ background: url(../img/arrow.png) no-repeat;
+ border: 0;
+ display: none;
+ position: absolute;
+  top: -10px;
+  left: 63px;
+ height: 11px;
+ width: 20px;
+ text-indent: -9999px;
+}
+
+
