--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,11 @@ html, body {
 
 .controles ul li ul{ 
 	
-	 background: #F4F4F4;
+	 background: rgba(244,244,244, 0.7);
 	 border: 0px solid #000;
 	  -webkit-border-radius: 5px;
 	  -moz-border-radius: 5px;
-	 -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
+	 -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 	 margin: 10px 0 0 -46px;
 	 padding: 0 10px 0;
 	 position: absolute;
@@ -120,7 +120,7 @@ html, body {
 }
 
 .controles ul li ul li a{
-	color: black;
+	color: black !important; 
  	text-shadow: none;
 
 }
