--- a/css/style.css
+++ b/css/style.css
@@ -144,4 +144,16 @@ html, body {
  opacity: 0.6;
 }
 
+#loading{
+	display: none;
+	position: absolute;
+	background: url(../img/loading.gif) no-repeat;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 100px;
+    height: 100px;
+}
+
 
