--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,28 @@ html, body {
 }
 
 .busqueda #search{
-	border-radius: 2em;
+
+	border-radius:20px;
+    border:0;
+    border-top:1px solid #b4c1cb;
+    box-shadow:inset 0 1px 2px rgba(0,0,0,0.08);
 	height: 30px;
 	width: 70%;
-	background-color: white;
+	background: white;
+	opacity: 0.6;
 	font-size: 16px;
+	text-shadow:0 1px 1px #fff;
 	text-align: left;
 	margin-right: 15px;
 
+
+}
+.busqueda #search:focus{
+	opacity: 1;
+	border:2px solid #9ecbe2;
+    box-shadow:0 0 6px #abdcff, inset 0 1px 2px rgba(0,0,0,0.08);
+    
+    outline: none;
 }
 
 .controles{
