--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
 
 #bodyEstable {
 
-    background:  url(../img/ruido.png) repeat, url(../img/fondoMaps.png);
+    background: url(../img/fondoMaps.jpg);
     z-index: -1; /* Keep the background behind the content */
     /* don't forget to use the prefixes you need */
     
@@ -322,6 +322,7 @@ html, body {
 }
 
 .tab_content .datosNegocios{
+	display: none;
 	position: absolute;
  	right: 2em;
  	top: 2em;
@@ -332,10 +333,10 @@ html, body {
  
 }
 	.tab_content .datosNegocios .data{
-		height: 50%;
+		height: 40%;
 		margin: 1em auto;
 		width: 95%;
-		background-color: #EEE;	
+		
 	}
 
 
@@ -344,7 +345,7 @@ html, body {
 		height: 40%;
 		margin: 1em auto;
 		width: 95%;
-		background-color: #0FF;	
+		
 	 
 	}
 
@@ -356,7 +357,7 @@ html, body {
  	height: 90%;
  	background: white;
  	border-radius: 20px;
- 	overflow-y: scroll;
+ 	
 }
 
 .tab_content #mapa{
@@ -378,7 +379,7 @@ html, body {
 
 input[type="text"],  select {
 	font-family: 'Open Sans', sans-serif;
-	width:60%;
+	width:50%;
 	padding:0.7em 2em 0.7em 1.7em;
 	color:#1673AD;
 	font-size:15px;
@@ -386,13 +387,124 @@ input[type="text"],  select {
 	background: none;
 	border:none;
 	font-weight:600;
+	text-align: left;
+	margin-bottom: 1em;
+	border-radius: 20px;
 	}
 
-input[name="nombre"]{
-	
-	font-size: 20px;
+input[name="nombre"]{	
+	font-size: 25px;
+	text-align: center;
+	width:80%;
+	margin-bottom: 0.5em;
 }
 
+select, input[name="celular"]{
+	width: 30%;
+}
+
+input[name="telefono"] {
+	width:45%;
+}
+
+
+ #form_establecimiento .titulo{
+ 	margin: 0 auto;
+ 	width: 60%;
+ 	text-align: center;
+ }
+
+#regEstable #form_establecimiento input[name="nombre"]{
+	margin-top: 0.8em;
+}
+
+#regEstable #form_establecimiento select{
+	margin-left: 1em;
+	margin-bottom: 2.5em;
+}
+
+#form_establecimiento #ubicacion{
+	border-radius: 20px;
+}
+
+#regEstable #form_establecimiento label{
+	font-family: 'Open Sans', sans-serif;
+	width:50%;
+	padding:0.7em 2em 0.7em 1.7em;
+	color:#1673AD;
+	font-size:15px;
+	outline: none;
+	background: none;
+	border:none;
+	font-weight:600;
+	text-align: left;
+	margin-bottom: 1em;
+}
+
+#error{
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
+	color: #9D1526;
+}
+
+#regEstable .submitReg{
+	width: 60%;
+	margin: 2em auto;
+	text-align: right;
+	
+}
+
+#regEstable .submitReg #registrar_negocio_btn{
+	background: #80A089;
+	font-size:12px;
+	display: inline-block;
+	font-weight:600;
+	color: #fff;
+	transition: 0.1s all;
+	-webkit-transition: 0.1s all;
+	-moz-transition: 0.1s all;
+	-o-transition: 0.1s all;
+	cursor: pointer;
+	outline: none;
+	padding:15px 10px;
+	font-family: 'Open Sans', sans-serif;
+	width:40%;
+	border:none;
+	border-radius: 1em;
+	-webkit-border-radius: 1em;
+	-o-	border-radius: 1em;
+	-moz-border-radius: 1em;
+}
+
+.datosNegocios .submitReg{
+	width: 80%;
+	margin: 1.2em auto;
+	text-align: right;
+	
+}
+
+.datosNegocios .submitReg #update_negocio_btn{
+	background: #80A089;
+	font-size:13px;
+	display: none;
+	font-weight:400;
+	color: #fff;
+	transition: 0.1s all;
+	-webkit-transition: 0.1s all;
+	-moz-transition: 0.1s all;
+	-o-transition: 0.1s all;
+	cursor: pointer;
+	outline: none;
+	padding:8px 5px;
+	font-family: 'Open Sans', sans-serif;
+	width:10%;
+	border:none;
+	border-radius: 1em;
+	-webkit-border-radius: 1em;
+	-o-	border-radius: 1em;
+	-moz-border-radius: 1em;
+}
 
 
 
