--- a/css/login.css
+++ b/css/login.css
@@ -41,7 +41,7 @@ body{
 .login-form {
 	background:#fff;
 	width:32%;
-	margin:9% auto 4% auto;
+	margin:5% auto 4% auto;
  	position: relative;
 }
 .head {
@@ -77,7 +77,7 @@ form li label{
 	padding-left: 2em;
 	padding-right: 2px;
 	color:#858282;
-	font-size:18px;
+	font-size:15px;
 }
 
 .icon{
@@ -100,16 +100,16 @@ input[type="radio"]{
 	display: inline-block;
 	border:0;
 }
-input[type="text"], input[type="password"], input[type="email"], input[type="date"],select {
+input[type="text"], input[type="password"], input[type="email"] {
 	font-family: 'Open Sans', sans-serif;
 	width:60%;
 	padding:0.7em 2em 0.7em 1.7em;
-	color:#858282;
-	font-size:18px;
+	color:#1673AD;
+	font-size:15px;
 	outline: none;
 	background: none;
 	border:none;
-	font-weight:600;
+	font-weight:500;
 	}
 form li:hover{
 	border:1px solid #40A9DF;
@@ -228,107 +228,53 @@ input[type="submit"]:hover{
 .copy-right p a:hover {
 	color:#fff;
 }
-/*-----start-responsive-design------*/
-@media (max-width:1024px){
-.login-form  {
-		margin:8% auto 0;
-		width:45%;
-	}
-	.copy-right {
-	left: 41%;
-	bottom:-18%;
-	}
-}
-@media (max-width:768px){
-	.login-form  {
-		margin:12% auto 0;
-		width:57%;
-	}
-	.copy-right {
-	left:38%;
-	bottom:-14%;
-	}
-}
-@media (max-width:640px){                                  
-	.login-form  {
-		margin:13% auto 0;
-		width:70%;
-	}
-	.copy-right {
-	left:36%;
-	bottom:-18%;
-	}
-}
-@media (max-width:480px){                                  
-	.login-form  {
-		margin:20% auto 0;
-		width:90%;
-	}
-	.copy-right {
-	left:30%;
-	bottom:-17%;
-	}
-	
-}
-@media (max-width:320px){                                  
-	.login-form  {
-		margin:20% auto 0;
-		width:95%;
-	}
-	form{
-		padding:19% 1.5em; 
-	}
-	form li{
-		margin-top:10px;
-	}
-	
-	input[type="text"], input[type="password"]{
-		font-size:15px;
-		padding: 0.5em 1em 0.5em 1em;
-	}
-	input[type="submit"]{
-		float:none;
-		font-size: 15px;
-		padding: 10px 10px;
-		width: 40%;
-		margin-left: 28%;
-	}
-	.head{
-		top:-12%;
-		left:35.5%;
-	}
-	.head img {
-	width:69%;
-	}
-	.user {
-		background: url(../images/icons.png) no-repeat 12px 4px;
-	}
-	.lock {
-		background: url(../images/icons.png) no-repeat -20px 3px;
-	}
-	.p-container .checkbox {
-	float: none;
-	text-align: center;
-	}
-	.p-container{
-		margin-top: 0;
-	}
-	.icon{
-		margin:6px -11px 0px 0px;
-	}
-	.p-container .checkbox i {
-	position: absolute;
-	top: 18px;
-	left: 43px;
-	}
-	.copy-right {
-	left:20%;
-	bottom:-10%;
-	}
-}
+
+
 
 #error {
 	display: none;
 	margin: 1em;
-	color: red;
+	color: #9D1526;
+	text-align: center;
 }
+
+.nuevoSize{
+	width: 75%;
+	margin-top: 1%;
+}
+
+.nuevoSizeForm{
+	padding:5% 2.5em 1% 2.5em;
+
+}
+
+select {
+	font-family: 'Open Sans', sans-serif;
+	width:30%;
+	margin-top:0.8em ;
+	margin-left: 0.5em;
+	margin-bottom: 0.8em;
+	color:#1673AD;
+	font-size:15px;
+	outline: none;
+	background: none;
+	border:none;
+	font-weight:500;
+}
+
+input[type="date"] {
+	font-family: 'Open Sans', sans-serif;
+	width:30%;
+	padding:0.7em 2em 0.7em 1.7em;
+	color:#1673AD;
+	font-size:15px;
+	outline: none;
+	background: none;
+	border:none;
+	font-weight:500;
+	}
+
+.newp-containerR{
+	margin-top: 0;
+}
+
